advanced features as real time chatting, users list, exporting chat history